--- a/src/index.css
+++ b/src/index.css
@@ -26,8 +26,8 @@ body {
   margin: 0;
 }
 
-.create-form,.read-table{
-   padding-top: 120px;
+.pt-80{
+   padding-top: 80px;
   }
 .row{
   justify-content: center;
